--- a/src/com/ulatina/grupo5/vista/BookeoListadoView.form
+++ b/src/com/ulatina/grupo5/vista/BookeoListadoView.form
@@ -79,7 +79,7 @@
                   </Group>
                   <Component id="jScrollPane2" min="-2" pref="296" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Component id="jScrollPane1" min="-2" pref="296" max="-2" attributes="0"/>
+                  <Component id="pnAtracciones" min="-2" pref="296" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -113,7 +113,7 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="jScrollPane2" pref="516" max="32767" attributes="0"/>
-                              <Component id="jScrollPane1" max="32767" attributes="0"/>
+                              <Component id="pnAtracciones" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -156,8 +156,9 @@
             </Component>
           </SubComponents>
         </Container>
-        <Container class="javax.swing.JScrollPane" name="jScrollPane1">
+        <Container class="javax.swing.JScrollPane" name="pnAtracciones">
           <AuxValues>
+            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
             <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
           </AuxValues>
 
